# SmartSense

./: .gitignore  README.md  gcn2.py
package/ssne_ai_demo/: ssne_ai_demo.mk
src/app_demo/face_detection/ssne_ai_demo/: CMakeLists.txt  demo_gcn.cpp
src/app_demo/face_detection/ssne_ai_demo/app_assets/models/: 937a1331-cad7-43b2-b597-5d96111550ee_gcnv2_a1_640.m1model
src/app_demo/face_detection/ssne_ai_demo/include/: common.hpp  utils.hpp
src/app_demo/face_detection/ssne_ai_demo/src/: gcn_extractor.cpp  utils.cpp
